Job Application for Software Engineer, Devices at American Well. Guidewire Software, Inc. Careers - Software Developer - Mississauga, ON, Canada. Job Application for Software Engineering Intern at imo.im. Senior Software Engineer (Java) | Trustwave Careers. Daxko Senior Software Engineer | SmartRecruiters. Daxko Senior Software Engineer | SmartRecruiters. Job Application for Senior Software Engineer, Back End at Dataminr. Job Application for Senior Software Engineer, Back End at Dataminr. Job Application for Senior Software Engineer, Content at Dataminr. Job Application for Software Engineer II, Platform at Dataminr. Job Application for Software Engineer II, Front End at Dataminr. Job Application for Software Engineer II, Full Stack at Dataminr. NICE inContact Careers - Software Engineer II. Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland. ServiceNow Careers - Software Architect (Distinguished Software Engineer) – UI. Nextech Software Engineer III | SmartRecruiters. Optimizely Internship - Software Engineer - SF | SmartRecruiters. Optimizely Internship - Software Engineer - Austin | SmartRecruiters. Bosch Group Software Engineer, Data Infrastructure | SmartRecruiters. Bosch Group Senior Software Engineer, Data Infrastructure | SmartRecruiters. NICE inContact Careers - Sr. Software Engineer (Java). Guidewire Software, Inc. Careers - Software Engineer, Full-Stack – Dublin, Ireland. Gigamon Careers - Principle Software Engineer - Data Storage, ETL and Analytics. Software Engineer III | Current Openings. Senior Software Engineer #1200 job at Sojern in San Francisco, CA, powered by JobScore. Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters. Job Application for Senior Software Engineer, Atlas at Mapbox. SparkPost Careers - Senior Software Engineer. SonetJob | Offre d'emploi - Ingénieurs, Techniciens, Production, Etudes - Software Engineer. Job @ Archilyse (Zürich): Senior Software Developer | JOIN. Palo Alto Net

--- a/software.html
+++ b/software.html
@@ -39,15 +39,23 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
+<h5><a href='https://boards.greenhouse.io/americanwell/jobs/4500028002'>Job Application for Software Engineer, Devices at American Well</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qn79Vfwi&k=Job&j=onTMafwW&__jvst=Employee&__jvsd=sq7Ckiwg&__jvsc=Twitter&bid=ntr4oMwD'>Senior Software Engineer (Java) | Trustwave Careers</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=na55oMwZ'>Guidewire Software, Inc. Careers - Software Developer - Mississauga, ON, Canada</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
+<p><span class="badge badge-light">Palo Alto  Palo Alto, California</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qn79Vfwi&k=Job&j=onTMafwW&__jvst=Employee&__jvsd=sq7Ckiwg&__jvsc=Twitter&bid=ntr4oMwD'>Senior Software Engineer (Java) | Trustwave Careers</a></h5> 
+<p><span class="badge badge-light">Chicago, Illinois</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -63,7 +71,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937490'>Job Application for Senior Software Engineer, Content at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937490'>Job Application for Senior Software Engineer, Content at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -71,7 +79,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -143,7 +151,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sonetjob.com/job/offer?id=9814d31095654320&tc=jo-tw'>SonetJob | Offre d'emploi - Ing?nieurs, Techniciens, Production, Etudes - Software Engineer</a></h5> 
+<h5><a href='https://www.sonetjob.com/job/offer?id=9814d31095654320&tc=jo-tw'>SonetJob | Offre d'emploi - Ing?nieurs, Techniciens, Production, Etudes - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -195,7 +203,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -223,7 +231,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409324/software-developer/?TrackID=97736'>Software Developer job with Travelers Insurance | 6409324</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409324/software-developer/?TrackID=97736'>Software Developer job with Travelers Insurance | 6409324</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -365,7 +373,7 @@
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938503'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1938503'>Job Application for Senior Software Engineer (Work from Home) at Varsity Tutors</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -389,7 +397,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -434,14 +442,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qneaVfwq&k=Job&j=o0Xibfwa&__jvst=Employee&__jvsd=slkU7hws&__jvsc=Twitter&bid=noWioMwh'>HelpSystems Careers - Semi-Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/synack/jobs/1322740'>Job Application for Sr. Software Engineer at Synack</a></h5> 
-<p><span class="badge badge-light">Redwood City, CASan Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4491111002'>Job Application for Software Engineer at Anaplan</a></h5> 
-<p><span class="badge badge-light">London  London</span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
