--- a/project-manager.html
+++ b/project-manager.html
@@ -40,11 +40,23 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/americanwell/jobs/4498432002'>Job Application for Project Manager, Health Systems at American Well</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oDfsbfwf&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nzq5oMwJ'>Ingram Micro Careers - Program Manager - Sales</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/JifQspKoLI/Project-Manager-Data-Centres'>Project Manager (Data Centres) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RPIConsultants/743999697986495-project-manager'>RPI Consultants Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RPIConsultants/743999697986495-project-manager'>RPI Consultants Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -88,7 +100,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IPSTechnologyServices/743999698299509-program-manager'>IPS Technology Services Program Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IPSTechnologyServices/743999698299509-program-manager'>IPS Technology Services Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbus, OH, USA  Columbus, OH</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -116,7 +128,7 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -266,7 +278,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://khatibalami.breezy.hr/p/17206b8a6ea4-project-manager'>Project Manager at khatibalami</a></h5> 
+<h5><a href='https://khatibalami.breezy.hr/p/17206b8a6ea4-project-manager'>Project Manager at khatibalami</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -282,7 +294,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cadenceresourcing.com/jobs/9171081/project-manager-software-projects.asp'>Project Manager - Software Projects : Another job on . Cadence Resourcing: Information technology recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cadenceresourcing.com/jobs/9171081/project-manager-software-projects.asp'>Project Manager - Software Projects : Another job on . Cadence Resourcing: Information technology recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -336,7 +348,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280122-information-assurance-program-manager-ia-pm-'>MindPoint Group, LLC Information Assurance Program Manager (IA PM) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698280122-information-assurance-program-manager-ia-pm-'>MindPoint Group, LLC Information Assurance Program Manager (IA PM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -344,7 +356,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698450736-project-manager-im-business-development-d-m-w-'>Auto1 Project Manager im Business Development (d/m/w) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698450736-project-manager-im-business-development-d-m-w-'>Auto1 Project Manager im Business Development (d/m/w) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -352,11 +364,11 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452492-senior-project-manager-m-w-d-commercial-hightech-manufacturing'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial / Hightech & Manufacturing | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452492-senior-project-manager-m-w-d-commercial-hightech-manufacturing'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial / Hightech & Manufacturing | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vixxo/jobs/4499581002'>Job Application for Field Project Manager at VIXXO</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vixxo/jobs/4499581002'>Job Application for Field Project Manager at VIXXO</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -400,7 +412,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GoodReturn/743999698443108-nauru-project-manager'>Good Return Nauru Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GoodReturn/743999698443108-nauru-project-manager'>Good Return Nauru Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -435,18 +447,6 @@ of the Operations Manager to ensure 24/7 professional parking management.</p>
 <hr/>
 <h5><a href='https://www.rightcrowd.com/job/it-agile-project-manager/'>IT Agile Project Manager - RightCrowd</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/bioanlaytical-project-manager-vaccine-sciences-4874'>Bioanlaytical Project Manager - Vaccine Sciences - PPD Careers</a></h5> 
-<p><span class="badge badge-light">Virginia, United States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/project-managersr-project-manager-assoc-director-peri-and-post-approval-team-interventional-studies-4869'>Project ManagerSr Project Manager/Assoc Director - Peri and Post Approval Team (Interventional Studies) - PPD Careers</a></h5> 
-<p><span class="badge badge-light">Cambridge Greece Greece  Italy Italy</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=o0NSafwz&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nVn7nMw3'>Herjavec Group Careers - Program Manager, Product Marketing</a></h5> 
-<p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 
