--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -94,11 +94,11 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229034-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229034-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -247,7 +247,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p>4 days ago ... Software Development Engineer | US - Sunnyvale ? Backend Java Developer - 
 Yahoo! Finance | US - Sunnyvale ? Software Dev Engineer | US - Sunnyvale.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>22 hours ago ... PLAYSTUDIOS is a developer of engaging casual games for the world's largest 
 social and mobile platforms. Founded by a team of experienced gaming and?...</p>
